--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<div class="instructions">
 			<ul>
-				<li><a href="/lemon">«Лимон»</a> — Мотоджірō Каджії (1901−1932)</li>
+				<li><a href="/lemon-motojirou-kajii.html">«Лимон»</a> — Мотоджірō Каджії (1901−1932)</li>
 			</ul>
 		</div>
 
