--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -25,11 +25,11 @@
 
 <body class="home blog" >
 
-	<div class="temp"><div class="intro"><a href="/" alt="Сконтактувати..." target="_blank"></a> перекладає обрані твори українською мовою.</div>
+	<div class="temp"><div class="intro">«Лимон»<br />Мотоджірō Каджії (1901−1932)</div>
 
 		<div class="instructions">
 			<ul>
-				<li><a href="/lemon">«Лимон»</a> — Мотоджірō Каджії (1901−1932)</li>
+				<li><a href="/">«Лимон»</a> — Мотоджірō Каджії (1901−1932)</li>
 			</ul>
 		</div>
 
