--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -9,7 +9,7 @@
 	
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>Тенаревич. Переклад обраних творів українською мовою</title>
+	<title>«Лимон» — Мотоджірō Каджії (1901−1932) | Тенаревич. Переклад обраних творів українською мовою</title>
 	<link rel='stylesheet' id='una-main-styles-css'  href='https://gitcdn.link/repo/tenarevyc/tenarevyc.github.io/master/una-main.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
