--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -25,9 +25,9 @@
 
 <body class="home blog" >
 
-	<div class="temp"><div class="intro">«Лимон»<br />Мотоджірō Каджії (1901−1932)</div>
+	<div class="temp"><div class="intro">«Лимон»<br /><i>Мотоджірō Каджії (1901−1932)</i></div>
 
-		<div class="instructions">
+		<div class="instructions">Мотоджірō Каджії (1901−1932)
 			<ul>
 				<li><a href="/">«Лимон»</a> — Мотоджірō Каджії (1901−1932)</li>
 			</ul>
