--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -27,7 +27,9 @@
 
 	<div class="temp"><div class="intro"><b>«Лимон»</b></div>
 
-		<div class="instructions">      Тягар тривоги наважив єство моє, та відчувалося це не огидою чи роздратуванням, а радше так, ніби я проживав у похміллі: з ночами й ночами тяжкого питва. Туберкульоз й нервова стома були ні до чого. І навіть мої великі борги не були цьому причиною. То був неописаний тягар. Він відвернув мене від музики та поезій, що я їх колись дуже любив. Тепер, якщо я навіть когось і обтяжував проханням увімкнути платівку, то зразу ж покидав їх після кількох тактів. Тільки те і міг, що вештатися вулицями.
+		<div class="instructions">
+
+	  <p>Тягар тривоги наважив єство моє, та відчувалося це не огидою чи роздратуванням, а радше так, ніби я проживав у похміллі: з ночами й ночами тяжкого питва. Туберкульоз й нервова стома були ні до чого. І навіть мої великі борги не були цьому причиною. То був неописаний тягар. Він відвернув мене від музики та поезій, що я їх колись дуже любив. Тепер, якщо я навіть когось і обтяжував проханням увімкнути платівку, то зразу ж покидав їх після кількох тактів. Тільки те і міг, що вештатися вулицями.</p>
 
       Мене приваблювали речі зі сплюндрованою красою; такі, як затерті квартали, мої улюбленці. Між них найближчими мені були не знеособлені головні вулиці, а тисячу разів переходжені закутки, де сушилась темна від вгрузлого бруду білизна, де манівці були всипані сміттям. Там я любив зазирати у вікна неохайних хатин. Серед цих хитких помешкань з їхніми поцвілими земляними стінами, що з вітром і дощем вже ось-ось повернуться до ґрунту, іскра життя виднілась хіба що в рослинах, в несподіванці розквітлого соняха чи канни.
 
