--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -10,7 +10,7 @@
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>«Лимон» — Мотоджірō Каджії (1901−1932) | Тенаревич. Переклад обраних творів українською мовою</title>
-	<link rel='stylesheet' id='una-main-styles-css' href='https://gitcdn.xyz/repo/tenarevyc/tenarevyc.github.io/master/una-page.css' type='text/css' media='screen' />
+	<link rel='stylesheet' id='una-main-styles-css' href='hhttps://gitcdn.xyz/repo/tenarevyc/tenarevyc.github.io/master/una-page.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/2j0G0Y473X3e2o2L3k0c/favicon_zS4_icon.ico" sizes="32x32">
