--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -31,7 +31,7 @@
 
 <body class="home blog" >
 
-	<div class="temp"><div class="intro"><i>Лимон»</i></div>
+	<div class="temp"><div class="intro"><i>Лимон</i></div>
 
 		<div class="instructions">
 
