--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -31,6 +31,8 @@
 
 <body class="home blog" >
 
+	<div class="navbar"><a href="/">← повернутися до змісту</a></div>
+
 	<div class="temp"><div class="intro"><center><i>Лимон</i></center></div>
 
 		<div class="instructions">
