--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -6,6 +6,7 @@
 
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="robots" content="all" />
 	
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -33,7 +34,7 @@
 
 	<div class="navbar"><a href="/">← повернутися до змісту</a></div>
 
-	<div class="temp"><div class="intro"><center><i>Лимон</i></center></div>
+	<div class="temp"><div class="intro"><center><i>Лимон</i><br><span class='author'>МОТОДЖІРŌ КАДЖІЇ</span></center></div>
 
 		<div class="instructions">
 
@@ -41,7 +42,7 @@
 
       <p>Мене приваблювали речі зі сплюндрованою красою; такі, як затерті квартали, мої улюбленці. Між них найближчими мені були не знеособлені головні вулиці, а тисячу разів переходжені закутки, де сушилась темна від вгрузлого бруду білизна, де манівці були всипані сміттям. Там я любив зазирати у вікна неохайних хатин. Серед цих хитких помешкань з їхніми поцвілими земляними стінами, що з вітром і дощем вже ось-ось повернуться до ґрунту, іскра життя виднілась хіба що в рослинах, в несподіванці розквітлого соняха чи канни.</p>
 
-      <p>Часом, коли йшов вздовж таких вулиць, я пробував уявити, що втік з Кіото до далекого міста, де ніхто мене не знає: Сендай, може, чи Наґасакі. Це мало б бути тихою місциною: кімната в госте́лі, пуста і велика; чиста постіль, аромат сітки від комарів і щойно накрохмалене літнє кімоно. Там я зміг би провести місяці, ні про що не мислячи. Я відчував, що коли бажатиму достатньо сильно, зможу перетворити ці закутки на щось інше… Як зображення зайшлися діяти, мій розум почав фарбувати їх одне за одним у свої кольори, аж поки вони не припасувалися до мого покинутого оточення. Тоді й тільки тоді я смакував задоволення від утрати реальности в собі.</p>
+      <p>Часом, коли йшов вздовж таких вулиць, я пробував уявити, що втік з Кіото до далекого міста, де ніхто мене не знає: Сендай, може, чи Наґасакі. Це мало б бути тихою місциною: кімната в госте́лі, пуста і велика; чиста постіль, аромат сітки від комарів і щойно накрохмалене літнє кімоно. Там я зміг би провести місяці, ні про що не мислячи. Я відчував, що коли бажатиму достатньо сильно, зможу перетворити ці закутки на щось інше... Як зображення зайшлися діяти, мій розум почав фарбувати їх одне за одним у свої кольори, аж поки вони не припасувалися до мого покинутого оточення. Тоді й тільки тоді я смакував задоволення від утрати реальности в собі.</p>
 
       <p>Ще одним джерелом заспокоєння мого стало розглядання пакунків з дешевими фо́єрверками: одні — з нестерпно яскравими червоними, фіолетовими, золотими та блакитними стрічками і назвами, як то «Зірки, що падають над храмом Чусанджі», «Квіти війни» чи «Зів’ялі трави пампасів»; інші — петарди — були запаковані кружалами, що мали потім крутитися. Такі речі мали химерну привабу.</p>
 
@@ -53,13 +54,13 @@
 
       <p>Одного ранку (я лишався пожити у друзів, мандруючи з одного дому в інший) господар мого тодішнього притулку пішов на навчання, залишивши мене у своїй пустій оселі. Вибору не було: мусив продовжити вештатися вулицями. Щось вело мене від закутку до закутку аж до маґазина солодощів, а потім це щось підштовхнуло далі, до наступного маґазина, де я провів трохи часу, вглядаючись у сушену рибу та пасту з бобів. Потім, по Терамачі, я вийшов на проспект Ніджō, нарешті спинившись перед овочевою лавкою.</p>
 
-      <p>Мабуть, варто її описати, бо ж це був мій улюблений маґазин з усіх. Нічим не примітний ззовні, він, однак, втілював цю специфічну красу, типову для подібних закладів, краще, ніж будь-який інший. Їхні фрукти були викладені на чорних лакованих дошках, часом обдертих, що хилились під гострим кутом. Продукти було посортовано так, що розмір фруктів та їхній колір, здається, застигав у просторі та часі, мовбито яскраве алеґро трапилося на очі Медузі та стало каменем. Всередині маґазина зелені овочі поскладали гірками, кожна вища за попередню. Листя моркви майже світилось, боби й маранта виблискували бісером води…</p>
+      <p>Мабуть, варто її описати, бо ж це був мій улюблений маґазин з усіх. Нічим не примітний ззовні, він, однак, втілював цю специфічну красу, типову для подібних закладів, краще, ніж будь-який інший. Їхні фрукти були викладені на чорних лакованих дошках, часом обдертих, що хилились під гострим кутом. Продукти було посортовано так, що розмір фруктів та їхній колір, здається, застигав у просторі та часі, мовбито яскраве алеґро трапилося на очі Медузі та стало каменем. Всередині маґазина зелені овочі поскладали гірками, кожна вища за попередню. Листя моркви майже світилось, боби й маранта виблискували бісером води...</p>
 
       <p>Особливо красивим це місце було ввечері: залита світлом вітрин, вулиця Терамачі повна життя, най і набагато спокійніша, ніж подібні вулички в Токіо чи О́саці.</p>
 
       <p>Та саме навколо цієї лавки висіла дивна темрява. Так, вона розміщувалась на куті малоосвітленого проспекту Ніджō, та це аж ніяк не пояснює, чому їхній сусід на Терамачі теж сидів у тіні. Хай там як, коли б на лавку та її сусідів світили яскраві лямпи, вони б не зачарували мене так. Маґазинів навіс випинався, як козирок у кепі, натягнутого на лоба. (Це не поетичне перебільшення. Побачивши це місце, дійсно хотілося кричати: «Глянь тільки-но на той маґазин в кепі!».) Без жодного суперництва навколо і з тьмою вгорі, ряд електричного освітлення під козирком омивав продукти, мов щедрий літній дощ. Дивлячись із вулиці, де голі лямпи світловими спіралями вкручувались у мої очі, чи з другого поверху кава́рні навпроти, мало що на Терамачі так мене надихало, як цей краєвид.</p>
 
-      <p>Того дня я вчинив річ нетипову: зробив у маґазині покупку, бо продавали дещо дивне, лимони. У модних місцях звісно це не було чимось незвичним, та цей маґазинчик був найзвичайнісіньким і тому рідко пропонував подібні штуки, принаймні наскільки мені відомо. О, як же мені хотілося тих лимонів: їхній колір, ніби загуслий шмат найчистішої лимонно-жовтої фарби на палітрі; їхня форма — туга прядка на вереті́нці… Я вирішив купити один. Потім знову вештався кіотськими вулицями. Блукав довго і почувався навдивовижу щасливим, бо здавалося, тягар тривоги, що так довго тяжів мене, полегшав, як тільки я торкнувся до свого нового майна. Такий, можливо, недоречний збіг, та це правда: запекла меланхолія поступилася одному-єдиному фрукту. Дивина людського духу!</p>
+      <p>Того дня я вчинив річ нетипову: зробив у маґазині покупку, бо продавали дещо дивне, лимони. У модних місцях звісно це не було чимось незвичним, та цей маґазинчик був найзвичайнісіньким і тому рідко пропонував подібні штуки, принаймні наскільки мені відомо. О, як же мені хотілося тих лимонів: їхній колір, ніби загуслий шмат найчистішої лимонно-жовтої фарби на палітрі; їхня форма — туга прядка на вереті́нці... Я вирішив купити один. Потім знову вештався кіотськими вулицями. Блукав довго і почувався навдивовижу щасливим, бо здавалося, тягар тривоги, що так довго тяжів мене, полегшав, як тільки я торкнувся до свого нового майна. Такий, можливо, недоречний збіг, та це правда: запекла меланхолія поступилася одному-єдиному фрукту. Дивина людського духу!</p>
 
       <p>Прохолоду лимона важко було описати. Мої сухоти тоді дійшли до стадії постійних лихоманок. Друзі та знайомі під час рукостискання з легкістю розуміли, наскільки хворим я був, такими теплими були мої руки. Може, саме через температуру відчувалося, як прохолода з лимона проливається крізь долоню й освіжає усе моє єство.</p>
 
@@ -77,7 +78,7 @@
 
       <p>Раптом я згадав про лимон, захований в рукаві мого кімоно. Якщо спробую вмостити його на вершині цієї різношерстої збірки кольорів, що трапиться?</p>
 
-      <p>Дещиця захвату, що я відчував його раніше, прокинулася знову. Я зібрав випадкові книги у вежу, розібрав її, а потім знову склав; додав нових книг із полиць, — монументальна споруда—зняв книжки, замінив їх іншими, будуючи уявний замок з червоного спочатку, потім із синього.</p>
+      <p>Дещиця захвату, що я відчував його раніше, прокинулася знову. Я зібрав випадкові книги у вежу, розібрав її, а потім знову склав; додав нових книг із полиць, — монументальна споруда — зняв книжки, замінив їх іншими, будуючи уявний замок з червоного спочатку, потім із синього.</p>
 
       <p>Нарешті закінчив. Затримавши подих навколо тремтливого серця, я обережно прилаштував лимон на вершину башти. Він підійшов ідеально. Поки я споглядав власну роботу, спокійно та тихо, лимонів відтінок ввібрав у свою форму лункі кольори. В застояному однорідному повітрі «Марудзен» це і лише це місце, здавалося, має силу тяжіння. Я трохи постояв там, дивлячись на свій замок.</p>
 
@@ -90,7 +91,12 @@
       <p>«І тоді, — я продовжив з ентузіязмом переслідувати власне видіння, — нічого не лишиться від цього гнітючого місця, крім купки тирси».</p>
 
       <p>Я спустився вниз вулицями Кьōґоку. Їх позавішували ґротескні кольорові кіноплякати.</p>
-		</div>
+
+      <br><hr><br>
+
+      <span class='annotation'>Українською мовою переклав <b>Тенаревич</b>; виконано за роботою <b>Роберта Улмера</b> з видання «The Oxford Book of Japanese Short Stories» (2002).</span>
+		
+	</div>
 
 	</div>
 
