--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,8 @@
 
 <body class="home blog" >
 
+	<div class="navbar"><a href="/">← повернутися до змісту</a></div>
+
 	<div class="temp"><div class="intro">Листи надсилайте на адресу <i>tenarevyc</i> [на] <i>gmail.com</i>.</div>
 
 	</div>
