--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,8 @@
 
 	<div class="navbar"><a href="/">← повернутися до змісту</a></div>
 
-	<div class="temp"><div class="intro">Листи надсилайте на адресу <i>tenarevyc</i> [на] <i>gmail.com</i>.</div>
+	<div class="temp"><div class="intro">Листи надсилайте на адресу <i>tenarevyc</i> на джимейл-крапка-ком.
+	</i>.</div>
 
 	</div>
 
