--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -7,6 +7,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="robots" content="all" />
+	<meta name=”description” content="Переклад оповідання «Лимон» (Remon) з однойменної збірки японського письменника доби Шова Мотоджіро Каджіії (Motojirou Kajii).">
 	
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
