--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<div class="instructions">
 			<ul>
 				<li><a href="/lemon-motojirou-kajii.html">«Лимон»</a> — Мотоджірō Каджії (1901−1932)</li>
+				<li><a href="/1917-sarah-rose-nordgren.html">«1917»</a> — Сара Ровз Нордґрен</li>
 			</ul>
 		</div>
 
