--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<ul>
 				<li><a href="/lemon-motojirou-kajii.html">«Лимон»</a> — Мотоджірō Каджії (1901−1932)</li>
 				<li><a href="/1917-sarah-rose-nordgren.html">«1917»</a> — Сара Ровз Нордґрен</li>
+				<li><a href="/fat-raymond-carver.html">«Жир»</a> — Раймонд Карвер (1938−1988)</li>
 			</ul>
 		</div>
 
