--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<li><a href="/lemon-motojirou-kajii.html">«Лимон»</a> — Мотоджірō Каджії (1901−1932)</li>
 				<li><a href="/1917-sarah-rose-nordgren.html">«1917»</a> — Сара Ровз Нордґрен</li>
 				<li><a href="/fat-raymond-carver.html">«Жир»</a> — Раймонд Карвер (1938−1988)</li>
-				<li><a href="/kleine-erinnerungen-hugo-von-hofmannsthal.html">«Маленькі спогадир»</a> — Гуґо фон Гофмансталь (1874−1929)</li>
+				<li><a href="/kleine-erinnerungen-hugo-von-hofmannsthal.html">«Маленькі спогади»</a> — Гуґо фон Гофмансталь (1874−1929)</li>
 			</ul>
 		</div>
 
