--- a/kleine-erinnerungen-hugo-von-hofmannsthal.html
+++ b/kleine-erinnerungen-hugo-von-hofmannsthal.html
@@ -11,7 +11,7 @@
 	
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>«Маленькі спогадир» — Гуґо фон Гофмансталь (1874−1929) | Тенаревич. Переклад обраних творів українською мовою</title>
+	<title>«Маленькі спогади» — Гуґо фон Гофмансталь (1874−1929) | Тенаревич. Переклад обраних творів українською мовою</title>
 	<link rel='stylesheet' id='una-main-styles-css'  href='https://gitcdn.xyz/repo/tenarevyc/tenarevyc.github.io/master/css/una-page.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
