--- a/kleine-erinnerungen-hugo-von-hofmannsthal.html
+++ b/kleine-erinnerungen-hugo-von-hofmannsthal.html
@@ -53,7 +53,7 @@
 				в твоєму нічному саді<br>
 				налилися соком плоди:<br>
 				хитає туди-сюди китайські<br>
-				ліхтарики-фрукти і світло<br>
+				ліхтарики-фрукти, і світло<br>
 				між них на гіллі<br>
 				хита шелестливий вітер<br>
 				в твоєму нічному саді.<br><br>
