--- a/kleine-erinnerungen-hugo-von-hofmannsthal.html
+++ b/kleine-erinnerungen-hugo-von-hofmannsthal.html
@@ -51,7 +51,7 @@
 
 				На тому жагучому гіллі<br>
 				в твоєму нічному саді<br>
-				налилися соком плоди:<br>
+				наллялися соком плоди:<br>
 				хитає туди-сюди китайські<br>
 				ліхтарики-фрукти, і світло<br>
 				між них на гіллі<br>
