--- a/fat-raymond-carver.html
+++ b/fat-raymond-carver.html
@@ -11,7 +11,7 @@
 	
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>«Жир» — Раймонд Карвер (1938−1988) | Тенаревич. Переклад обраних творів українською мовою</title>
+	<title>«Жир» — Раймонд Карвер (1938−1988) ('Fat'//Raymond Carver) | Тенаревич. Переклад обраних творів українською мовою</title>
 	<link rel='stylesheet' id='una-main-styles-css'  href='https://gitcdn.xyz/repo/tenarevyc/tenarevyc.github.io/master/css/una-page.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
