--- a/fat-raymond-carver.html
+++ b/fat-raymond-carver.html
@@ -195,7 +195,7 @@
 
       <br><br>
 
-      <span class='annotation'>Українською мовою переклав <b>Тенаревич</b>; виконано за книгою «Raymond Carver: Collected Stories» (2009).</span>
+      <span class='annotation'><i>'Fat'</i> // Raymond Carver. | Українською мовою переклав <b>Тенаревич</b>; виконано за книгою «Raymond Carver: Collected Stories» (2009).</span>
 		
 	</div>
 
