--- a/requiem-john-updike.html
+++ b/requiem-john-updike.html
@@ -56,7 +56,7 @@
 
       <br><br>
 
-      <span class='annotation'><i>'Requiem'</i> // John Updike | Українською мовою переклав <b>Тенаревич</b>.</span>
+      <span class='annotation'><b>'Requiem'</b> // <b>John Updike</b> | Українською мовою переклав <b>Тенаревич</b>.</span>
 		
 	</div>
 
