--- a/kleine-erinnerungen-hugo-von-hofmannsthal.html
+++ b/kleine-erinnerungen-hugo-von-hofmannsthal.html
@@ -63,7 +63,7 @@
 
       <br><br>
 
-      <span class='annotation'><b>»Kleine Erinnerungen«</b> / <b>Hugo von Hofmannsthal</b> | Українською мовою переклав <b>Тенаревич</b>.</span>
+      <span class='annotation'><b>»Kleine Erinnerungen«</b> // <b>Hugo von Hofmannsthal</b> | Українською мовою переклав <b>Тенаревич</b>.</span>
 		
 	</div>
 
