--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -95,7 +95,9 @@
 
       <br><br>
 
-      <span class='annotation'><b>'Lemon'</b> // <b>Motojirō Kajii</b> | Українською мовою переклав <b>Тенаревич</b>; виконано за роботою <b>Роберта Улмера</b> з видання «The Oxford Book of Japanese Short Stories» (2002).</span>
+      <span class='annotation'><b>'Lemon'</b> // <b>Motojirō Kajii</b>
+            <br>
+            Українською мовою переклав <b>Тенаревич</b>; виконано за роботою <b>Роберта Улмера</b> з видання «The Oxford Book of Japanese Short Stories» (2002).</span>
 		
 	</div>
 
