--- a/requiem-john-updike.html
+++ b/requiem-john-updike.html
@@ -56,7 +56,9 @@
 
       <br><br>
 
-      <span class='annotation'><b>'Requiem'</b> // <b>John Updike</b> | Українською мовою переклав <b>Тенаревич</b>.</span>
+      <span class='annotation'><b>'Requiem'</b> // <b>John Updike</b>
+      	<br>
+      	Українською мовою переклав <b>Тенаревич</b>.</span>
 		
 	</div>
 
