--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body class="home blog" >
 
-	<div class="temp"><div class="intro"><a href="/contact.html" alt="Сконтактувати...">Тенаревич</a> часом перекладає обрані твори українською мовою.</div>
+	<div class="temp"><div class="intro"><i><a href="/contact.html" alt="Сконтактувати...">Тенаревич</a></i> часом перекладає обрані твори українською мовою.</div>
 
 		<div class="instructions">
 			<ul>
