--- a/the-doom-that-came-to-sarnath-h-p-lovecraft.html
+++ b/the-doom-that-came-to-sarnath-h-p-lovecraft.html
@@ -17,6 +17,13 @@
 	<!-- Favicon -->
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/2j0G0Y473X3e2o2L3k0c/favicon_zS4_icon.ico" sizes="32x32">
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/0B3s3e143E0e3f3n3N42/favicon_tsn_icon.ico" sizes="16x16">
+
+      <!-- Link Preview -->
+      <meta property="og:url" content="https://tenarevyc.github.io/"/>
+      <meta property="og:title" content="«Погибель, що її стрів Сарнас» — Говард Філліпс Лавкрафт (1890−1937) | Тенаревич. Переклад обраних творів українською мовою"/>
+      <meta property="og:description"
+          content="'The Doom That Came to Sarnath' / H. P. Lovecraft"/>
+      <meta property="og:image" content="https://lh3.googleusercontent.com/a2XhUrgfjT4dPw0cMYNXDaMYDRmNA2LRnHcgwziA_zdNNGPsGfN1irVEgvSD3YSvUDhgZH_HzgkC_QoC1hiVPfyVI2bZTRhv_ykU7yyv9Pl0R8Wr8GXxbAnIhrbevpx3_zHKT2Q6R6K9TNhOV805VJA9DYiBByeKrk5TZk4qzzSwcp1HzwkngovGLwLN5YBG3nqp1T1fu5blnPLtAgIUOQjC62_fdB4S_2qdqaYwOBtUiX9XUxGw0US7q0eVI8JxQm8id27qprxdscmQZ2I6O4b6aNN4Gu8g23VsYQzdraCCrO5_KSSLGYFQDiJ31L-7gdSEHHxqZwM7daR-I4SFnGYoDuRpWUJMTLLoYGRhKhisMxSec1TOwTMwaJ8JkZ-gVN1ZNuXJl209mPoJ-_7bKa8EzezuIUSrrcjCEnwxdy9T7IbpkimrM_w50kHfiwLpFfRISEfQEDZcJXfR6mhq05pC2F_KiI-m9BFthOVh3dueD7VJY_WaLXZ3MjBrw49ROjlCSi1mrJ3eDmr1_1Fm_tw1VlFTouyZTV3j7T9LOAYcbv2FKHX-Re7BFz6RwN73u9UrHmzpHmB6UMeLRWh_n2yrgbOvvQqkzEHz62z7W_ebUjnUKGBOeirXQU9Cpdh-XpRNmn34mgVawkxCMEsPt_5j4CLpXiRNiJvuxSc1gyrL0-4bMOlk7Q=w298-h400-no"/>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155269516-1"></script>
