--- a/the-doom-that-came-to-sarnath-h-p-lovecraft.html
+++ b/the-doom-that-came-to-sarnath-h-p-lovecraft.html
@@ -19,7 +19,7 @@
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/0B3s3e143E0e3f3n3N42/favicon_tsn_icon.ico" sizes="16x16">
 
       <!-- Link Preview -->
-      <meta property="og:url" content="https://tenarevyc.github.io/"/>
+      <meta property="og:url" content="https://tenarevyc.github.io/the-doom-that-came-to-sarnath-h-p-lovecraft.html"/>
       <meta property="og:title" content="«Погибель, що її стрів Сарнас» — Говард Філліпс Лавкрафт (1890−1937) | Тенаревич. Переклад обраних творів українською мовою"/>
       <meta property="og:description"
           content="'The Doom That Came to Sarnath' / H. P. Lovecraft"/>
