--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -11,12 +11,19 @@
 	
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>«Лимон» — Мотоджірō Каджії (1901−1932) ('Lemon'//Motojirou Kajii) | Тенаревич. Переклад обраних творів українською мовою</title>
+	<title>«Лимон» — Мотоджірō Каджії (1901−1932) ('Lemon' / Motojirou Kajii) | Тенаревич. Переклад обраних творів українською мовою</title>
 	<link rel='stylesheet' id='una-main-styles-css'  href='https://gitcdn.xyz/repo/tenarevyc/tenarevyc.github.io/master/css/una-page.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/2j0G0Y473X3e2o2L3k0c/favicon_zS4_icon.ico" sizes="32x32">
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/0B3s3e143E0e3f3n3N42/favicon_tsn_icon.ico" sizes="16x16">
+
+      <!-- Link Preview -->
+      <meta property="og:url" content="https://tenarevyc.github.io/"/>
+      <meta property="og:title" content="«Лимон» — Мотоджірō Каджії (1901−1932)"/>
+      <meta property="og:description"
+            content="'Lemon' / Motojirou Kajii — Тенаревич. Переклад обраних творів українською мовою"/>
+      <meta property="og:image" content="https://lh3.googleusercontent.com/MoXiFp2kkjU39wnamqn0DK4_ZBglzO-M1RsX3Senw0x4IzrUFpyjX3PlMKGggZLir0edBJKkLRtLsG4JtLopUa5T-5FBG3VpooU3V4f0k5a3FpnFGFdqCNXW6pkp04MgHfGFcs_1uJ6W38t0EkOtWc6MS7ajQYzp1cfT0qx4wP8JhZ5Nu7z3iEhdyg7WKCiUWdNzK3HiuGXFivznUQ8GG5E5z5I3ANAoVa8wtayHAlwkSbUrjw8AzpnOm0jkpncYP-PqjQ4iVRFtE3EAhQGfn69VUH0vAVe43-wa4VUiF6IT3tA699VgWZhln8AYzAUcMZAVIv5JdksJS98uf7IwaYsDNd-PgoDVNuUSMhkRsQ6Od1TBu0F9pSXrNIZeNLYz2GgoQNZrm4zjGfG9qPbbEzHU76qTE5jSxYA_DVIA1JTMnfJj5aIulAxoC6L4n43v_PNUv7U4DLoWGxl_aD4qAUIS1BU7P40byzF_0pJr4ZTA5zpMn6KKmf3kliUcayI407086rbhf5QtuYF7MLt9REcHWochFUiht2BC6w0eBZT4-7LGJzBgXv4vU-Gts8SHl9o3sBVa2_PXoQUAIVLuoz8DqElGas6L2xzoWx_CvEghhNxJm9zqzKb4cRgvIvblaEBWFAhTSl6-WM_vGJFA50GDGjICyR79o3aak6ocozEZp5ssgGiCjA=w500-h451-no"/>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155269516-1"></script>
@@ -95,7 +102,7 @@
 
       <br><br>
 
-      <span class='annotation'><b>'Lemon'</b> // <b>Motojirō Kajii</b>
+      <span class='annotation'><b>'Lemon'</b> / <b>Motojirō Kajii</b>
             <br>
             Українською мовою переклав <b>Тенаревич</b>; виконано за роботою <b>Роберта Улмера</b> з видання «The Oxford Book of Japanese Short Stories» (2002).</span>
 		
