--- a/requiem-john-updike.html
+++ b/requiem-john-updike.html
@@ -11,7 +11,7 @@
 	
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>«Реквієм» — Джон Апдайк (1932−2009) ('Requiem'//John Updike) | Тенаревич. Переклад обраних творів українською мовою</title>
+	<title>«Реквієм» — Джон Апдайк (1932−2009) ('Requiem' / John Updike) | Тенаревич. Переклад обраних творів українською мовою</title>
 	<link rel='stylesheet' id='una-main-styles-css'  href='https://gitcdn.xyz/repo/tenarevyc/tenarevyc.github.io/master/css/una-page.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
@@ -63,7 +63,7 @@
 
       <br><br>
 
-      <span class='annotation'><b>'Requiem'</b> // <b>John Updike</b>
+      <span class='annotation'><b>'Requiem'</b> / <b>John Updike</b>
       	<br>
       	Українською мовою переклав <b>Тенаревич</b>.</span>
 		
