--- a/kleine-erinnerungen-hugo-von-hofmannsthal.html
+++ b/kleine-erinnerungen-hugo-von-hofmannsthal.html
@@ -11,12 +11,19 @@
 	
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>«Маленькі спогади» — Гуґо фон Гофмансталь (1874−1929) (»Kleine Erinnerungen«//Hugo von Hofmannsthal) | Тенаревич. Переклад обраних творів українською мовою</title>
+	<title>«Маленькі спогади» — Гуґо фон Гофмансталь (1874−1929) (»Kleine Erinnerungen« / Hugo von Hofmannsthal) | Тенаревич. Переклад обраних творів українською мовою</title>
 	<link rel='stylesheet' id='una-main-styles-css'  href='https://gitcdn.xyz/repo/tenarevyc/tenarevyc.github.io/master/css/una-page.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/2j0G0Y473X3e2o2L3k0c/favicon_zS4_icon.ico" sizes="32x32">
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/0B3s3e143E0e3f3n3N42/favicon_tsn_icon.ico" sizes="16x16">
+
+	<!-- Link Preview -->
+	<meta property="og:url" content="https://tenarevyc.github.io/"/>
+    <meta property="og:title" content="«Маленькі спогади» — Гуґо фон Гофмансталь (1874−1929)"/>
+    <meta property="og:description"
+          content="'»Kleine Erinnerungen« / Hugo von Hofmannsthal — Тенаревич. Переклад обраних творів українською мовою"/>
+    <meta property="og:image" content="https://lh3.googleusercontent.com/SC3OrfAk1MJ7mDx6LkCTQ30YBpupwWovEKWbIzg1ZFV3pjMa9NfhSzP70Pf6wxstq-QjBg148EERKFIAjsNFCKEenDtqrRyMwNwdBXp6m6NuW0rtt8D4NsktCO1Vegu62Mbm60mUNFkO3UI410bONSJSwF25nZBxLdSKGixUWUfuexI2zf8Lm-Vfjh1KdT48osKgnL1q_82Lk9IEedKLM31EYAfBWh6xcJrbiaNGMJJ6NFsRVm1x374p-4Dympb3OjWeUF0NYP-cDMj7IzDr_f4FgEFJtg9ppZGqKvOLqrwsm0KaMRStKcO3q1HG1lCNQSK6UecyGGI534UsokiM3Q-8y3zjpblApdWp5QsVyqgL0Vv4UKPaZs9F4PCOYSVpelM2tfAxcg9d2iER81Ep-sJ97ETSbqz7pO96W_FAHFyhtEQ9om3AsadlTH7tFZpT_V36flzHQ4dOcs18Knp-zA4mL48Y4M8gqk5oHqq9TcqXFmwqj3FbGIggGqG0hd-EMPu8HTN3CYOOcCbTY5etHPVt0osrYj-44WpwCuhGWRjc_tYZ9CVAy9qXj-DNm-psOuy_sXzOFktLU8Ink5Fwx-5YgoCc1ilmttpthmqCCzkGib3Mbu9P2y88x-9rrH9Be80BmE8casiUWWLytextzL7FpTGH3SAgAAlVEZuQ3vPBTXKIULdW0A=s350-no"/>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155269516-1"></script>
@@ -63,7 +70,7 @@
 
       <br><br>
 
-      <span class='annotation'><b>»Kleine Erinnerungen«</b> // <b>Hugo von Hofmannsthal</b>
+      <span class='annotation'><b>»Kleine Erinnerungen«</b> / <b>Hugo von Hofmannsthal</b>
       	<br>
       	Українською мовою переклав <b>Тенаревич</b>.</span>
 		
