--- a/fat-raymond-carver.html
+++ b/fat-raymond-carver.html
@@ -11,12 +11,19 @@
 	
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>«Жир» — Раймонд Карвер (1938−1988) ('Fat'//Raymond Carver) | Тенаревич. Переклад обраних творів українською мовою</title>
+	<title>«Жир» — Раймонд Карвер (1938−1988) ('Fat' / Raymond Carver) | Тенаревич. Переклад обраних творів українською мовою</title>
 	<link rel='stylesheet' id='una-main-styles-css'  href='https://gitcdn.xyz/repo/tenarevyc/tenarevyc.github.io/master/css/una-page.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/2j0G0Y473X3e2o2L3k0c/favicon_zS4_icon.ico" sizes="32x32">
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/0B3s3e143E0e3f3n3N42/favicon_tsn_icon.ico" sizes="16x16">
+
+	<!-- Link Preview -->
+	<meta property="og:url" content="https://tenarevyc.github.io/"/>
+    <meta property="og:title" content="«Жир» — Раймонд Карвер (1938−1988)"/>
+    <meta property="og:description"
+          content="Fat' / Raymond Carver — Тенаревич. Переклад обраних творів українською мовою"/>
+    <meta property="og:image" content="https://lh3.googleusercontent.com/HkeAI-1muZcHp1uUCGunN68KF24m-lo0LTpDIJgsjuEAnP2pPu1GQx57gNk2TqOPgPUHuvR33wlv_kYCLz4tXcYf2ytrjJ6X0DXJRpjajLUcjiOumIbkVb5P8Y1KLRY08sBEcBre-AhSFqzGp1rjETfP1tQ1RU6pwzHnSz47BJw5u3LYc5mq57BfNDVwBH8PNBAcsldQ_dgUVRVhtU4qukKRUY6txBccBm8IVVApiAcPkxho2CUKx9kKAx9DXGnwPxQnHDQEoprbHjtram2e9z_twiouE-pyLsQtYDa-VjyLov2nzx29iCYa7VJfKoAShKUNSFn1GSW_b8d7_8t1GGjTzYhM5qDRwl-iDjIoEh24S65z4cp4SYcB_FgJbSX6leyr0hUazsitRfoa2T2yBeFSLTuHSRmYEmCw6XTZ0Gaa2Mp-UnwALpEk3mJPA6kFXDQsYYq0FFlmdEtfOFJdHwo54B_xzpJqn4aq9MB_WSEEXHlX6ZBKZMz2XwzVnfh_UFFU5Mia9ZX5bspAnPsT3G3SJEMVUuFhos4PUk9R7-znGeR8gxD0cPCQ0gapTzkfGGeTky3-PlkcenybrcLtwE3sbTPvyTPgRp3wz70pms98TuT6D7wFuRrttK7fpgy_aRbDTRehEsXPz0ZCJWCtVNQ6BFE0zO8SRvgQAilt2D0dKPZpxzlmog=w327-h450-no"/>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155269516-1"></script>
@@ -195,7 +202,7 @@
 
       <br><br>
 
-      <span class='annotation'><b>'Fat'</b> // <b>Raymond Carver</b>
+      <span class='annotation'><b>'Fat'</b> / <b>Raymond Carver</b>
       	<br>
       	Українською мовою переклав <b>Тенаревич</b>; виконано за книгою «Raymond Carver: Collected Stories» (2009).</span>
 		
