--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
  	 gtag('config', 'UA-155269516-1');
 	</script>
 
+	<!-- Google SearchConsole -->
+	<meta name="google-site-verification" content="tkqa4fCwOg7lW7Gqbxt_9EZelEVkBs1vyDafHF-Zorc" />
+
 </head>
 
 <body class="home blog" >
