--- a/lemon-motojirou-kajii.html
+++ b/lemon-motojirou-kajii.html
@@ -23,7 +23,7 @@
       <meta property="og:title" content="«Лимон» — Мотоджірō Каджії (1901−1932)"/>
       <meta property="og:description"
             content="'Lemon' / Motojirou Kajii — Тенаревич. Переклад обраних творів українською мовою"/>
-      <meta property="og:image" content="https://lh3.googleusercontent.com/8KoV8W_3sYTAw2YkkSTxsRL5rlDKNfRkBZNGCKUC2mjP3-fci5k8pzR6VSXBmIuEdCHnH81cElEPu4Tp1C21woDNEBGHv4DfIKHJEXweIUI2dwuNWFRvslo3ijkHhQHqOol-53sgSCIjTfPyvYrB6soG15ru06ftZ1Mphma-Lxnl99rATfSbmok0WzK3VmN-vx5Y5ZQ7UllauW3w2p82IHHTrwbYk5gqvtlD8K7EjjYE-XGQ-Y9SNqprbpEN3ymG9z9QD0mZeDd7_0vUNtbfnP6sCKoPMYrh2HcUPOuf8NJoY0t8cU-TQdCSv3RApZ3qgU15T6aXG-Lu-EahTtGEPiwr0TseAXFFbDlzJn2cR-p_B5obnggurj02PSNBxamtnhXPgRMxBNY6kzN8NwPu66D-nPzoaew-ygP6TuR8ihcMdjyl5VmuCpOQpQn9_LC784AyunYsmd_wL005J-YqeMVbWoS2QPW_RlyVz_0We0VP1ncOvBEaGENSCY2v6tkJ-Xhwa5ReWfSvBf3G_v3RkkH3-P-Cqf-0y1J_bfdtSKx15kwyEi1itdYeix38h_iGwrq-7PpmS5dk1c-MNKP-5QlF2RkvWK-mctS5ngYfnM8WzJmGOZiq7tZ976602k4R4tBMbtvrnZnfccBVnLm21EJTVBP8Yo9uyMnon0MieKx447ulDbUgHg=s314-no"/>
+      <meta property="og:image" content="https://p78.f0.n0.cdn.getcloudapp.com/items/4guxvxGD/NEOBK-2117109.jpg?v=497b9250439bd90081a7103f17626f22"/>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155269516-1"></script>
