--- a/fat-raymond-carver.html
+++ b/fat-raymond-carver.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="«Жир» — Раймонд Карвер (1938−1988)"/>
     <meta property="og:description"
           content="'Fat' / Raymond Carver — Тенаревич. Переклад обраних творів українською мовою"/>
-    <meta property="og:image" content="https://lh3.googleusercontent.com/HkeAI-1muZcHp1uUCGunN68KF24m-lo0LTpDIJgsjuEAnP2pPu1GQx57gNk2TqOPgPUHuvR33wlv_kYCLz4tXcYf2ytrjJ6X0DXJRpjajLUcjiOumIbkVb5P8Y1KLRY08sBEcBre-AhSFqzGp1rjETfP1tQ1RU6pwzHnSz47BJw5u3LYc5mq57BfNDVwBH8PNBAcsldQ_dgUVRVhtU4qukKRUY6txBccBm8IVVApiAcPkxho2CUKx9kKAx9DXGnwPxQnHDQEoprbHjtram2e9z_twiouE-pyLsQtYDa-VjyLov2nzx29iCYa7VJfKoAShKUNSFn1GSW_b8d7_8t1GGjTzYhM5qDRwl-iDjIoEh24S65z4cp4SYcB_FgJbSX6leyr0hUazsitRfoa2T2yBeFSLTuHSRmYEmCw6XTZ0Gaa2Mp-UnwALpEk3mJPA6kFXDQsYYq0FFlmdEtfOFJdHwo54B_xzpJqn4aq9MB_WSEEXHlX6ZBKZMz2XwzVnfh_UFFU5Mia9ZX5bspAnPsT3G3SJEMVUuFhos4PUk9R7-znGeR8gxD0cPCQ0gapTzkfGGeTky3-PlkcenybrcLtwE3sbTPvyTPgRp3wz70pms98TuT6D7wFuRrttK7fpgy_aRbDTRehEsXPz0ZCJWCtVNQ6BFE0zO8SRvgQAilt2D0dKPZpxzlmog=w327-h450-no"/>
+    <meta property="og:image" content="https://p78.f0.n0.cdn.getcloudapp.com/items/DOuvyv1o/Screen+Shot+2020-01-23+at+22.16.40.png?v=6a32565978862b6a6bd6b734352a2d7a"/>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155269516-1"></script>
