--- a/the-doom-that-came-to-sarnath-h-p-lovecraft.html
+++ b/the-doom-that-came-to-sarnath-h-p-lovecraft.html
@@ -23,7 +23,7 @@
       <meta property="og:title" content="«Погибель, що її стрів Сарнас» — Говард Філліпс Лавкрафт (1890−1937)"/>
       <meta property="og:description"
             content="'The Doom That Came to Sarnath' / H. P. Lovecraft — Тенаревич. Переклад обраних творів українською мовою"/>
-      <meta property="og:image" content="https://lh3.googleusercontent.com/parGZmvp1i6MaC-csJouS977BRX3mshhbxQnY_5Ecit_SvbHdpAWlYIfrQ5g5G6miX1k2RXvOHcOFpoMdeGyIHPLeQ0QC5lDJgSxx69tOXl94MEuqSIuqaawLqMjDe3gQZWYgJzWUTzGhhJSU50KXgJYEqZe4niVF3TJJRI1tfQv7WpP8LMecwyGQRJWWZHZW1A62DZAN_WBWkYvYkBMzcdMC3vIsS6zgZpvZunPyMGSxrsz43DpmZofitytvt9LkT-1UqhJQ4wjguNUWmG6OcYDP5oQTb1LOQpQLGtP63YZeNIPlKwuOsVU5PuWSJ6hqZTDwGzpRziNVYBDZJc30LedYGV0xpkFZluVpi6E4vgk1je94goynT6fRx8ss9HFpl0lc8xL5eq0y4Ve-wNAvRKBA2mfZLNWfWYeFlRFMIcw3Jp8mk8Tjookuf6whgNKnrlKGLc15A9Hy9AKqG_FLswrT0NHPBcThItb1HGM6qCUxfx75wNg7KJkPPpCnCVeUfUbCPZxUQ8DsmEeDKBkXfhP2wJriIv1iB2p7cfSrTqvcuB4HvB0lS6yrsrrY6fzvWLDHKPHmlLLH0aTOURvB7LwnWvc7rLfGrrG3XMHNr6pNZtnynnXibmnI8X-2U8_B6-6OGSw7NpssGrdHmFlWDIIU4YY4iBrD2Y0rlMH_9fq4rgqzCaQtQ=w298-h400-no"/>
+      <meta property="og:image" content="https://p78.f0.n0.cdn.getcloudapp.com/items/E0uEBEex/8361493767_8286d57af0_w.jpg?v=8f41e6b92d94a3a0bf1ce9a118aadb06"/>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155269516-1"></script>
