--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,13 @@
 	<!-- Favicon -->
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/2j0G0Y473X3e2o2L3k0c/favicon_zS4_icon.ico" sizes="32x32">
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/0B3s3e143E0e3f3n3N42/favicon_tsn_icon.ico" sizes="16x16">
+
+	<!-- Link Preview -->
+	<meta property="og:url" content="https://tenarevyc.github.io/"/>
+    <meta property="og:title" content="Тенаревич. Переклад обраних творів українською мовою..."/>
+    <meta property="og:description"
+          content="... інколи."/>
+    <meta property="og:image" content="https://p78.f0.n0.cdn.getcloudapp.com/items/2Nurer8O/Tenarevyc%CC%8C.png?v=d20adfd775296c10c7d16eb105fa02c3"/>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155269516-1"></script>
