--- a/kleine-erinnerungen-hugo-von-hofmannsthal.html
+++ b/kleine-erinnerungen-hugo-von-hofmannsthal.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="«Маленькі спогади» — Гуґо фон Гофмансталь (1874−1929)"/>
     <meta property="og:description"
           content="»Kleine Erinnerungen« / Hugo von Hofmannsthal — Тенаревич. Переклад обраних творів українською мовою"/>
-    <meta property="og:image" content="https://lh3.googleusercontent.com/SC3OrfAk1MJ7mDx6LkCTQ30YBpupwWovEKWbIzg1ZFV3pjMa9NfhSzP70Pf6wxstq-QjBg148EERKFIAjsNFCKEenDtqrRyMwNwdBXp6m6NuW0rtt8D4NsktCO1Vegu62Mbm60mUNFkO3UI410bONSJSwF25nZBxLdSKGixUWUfuexI2zf8Lm-Vfjh1KdT48osKgnL1q_82Lk9IEedKLM31EYAfBWh6xcJrbiaNGMJJ6NFsRVm1x374p-4Dympb3OjWeUF0NYP-cDMj7IzDr_f4FgEFJtg9ppZGqKvOLqrwsm0KaMRStKcO3q1HG1lCNQSK6UecyGGI534UsokiM3Q-8y3zjpblApdWp5QsVyqgL0Vv4UKPaZs9F4PCOYSVpelM2tfAxcg9d2iER81Ep-sJ97ETSbqz7pO96W_FAHFyhtEQ9om3AsadlTH7tFZpT_V36flzHQ4dOcs18Knp-zA4mL48Y4M8gqk5oHqq9TcqXFmwqj3FbGIggGqG0hd-EMPu8HTN3CYOOcCbTY5etHPVt0osrYj-44WpwCuhGWRjc_tYZ9CVAy9qXj-DNm-psOuy_sXzOFktLU8Ink5Fwx-5YgoCc1ilmttpthmqCCzkGib3Mbu9P2y88x-9rrH9Be80BmE8casiUWWLytextzL7FpTGH3SAgAAlVEZuQ3vPBTXKIULdW0A=s350-no"/>
+    <meta property="og:image" content="https://p78.f0.n0.cdn.getcloudapp.com/items/2Nurer8O/Tenarevyc%CC%8C.png?v=d20adfd775296c10c7d16eb105fa02c3"/>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155269516-1"></script>
