--- a/the-doom-that-came-to-sarnath-h-p-lovecraft.html
+++ b/the-doom-that-came-to-sarnath-h-p-lovecraft.html
@@ -86,7 +86,7 @@
 
       <br><br>
 
-      <span class='annotation'><b>'The Doom That Came to Sarnath'</b> / <b>H. P. Lovecraft</b>
+      <span class='annotation'><b>'The Doom That Came to Sarnath'</b> (1920) / <b>H. P. Lovecraft</b>
       <br>
       Українською мовою переклав <b>Тенаревич</b>.</span>
 		
