--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>Тенаревич. Переклад обраних творів українською мовою</title>
-	<link rel='stylesheet' id='una-main-styles-css'  href='https://gitcdn.link/repo/tenarevyc/tenarevyc.github.io/master/una-main.css' type='text/css' media='screen' />
+	<link rel='stylesheet' id='una-main-styles-css'  href='https://rawcdn.githack.com/tenarevyc/tenarevyc.github.io/5feaf41d6432f48ec6f3b373de96f8d73ec433d5/una-main.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/2j0G0Y473X3e2o2L3k0c/favicon_zS4_icon.ico" sizes="32x32">
