--- a/requiem-john-updike.html
+++ b/requiem-john-updike.html
@@ -12,7 +12,7 @@
 	<!-- Responsive stylesheet -->
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>«Реквієм» — Джон Апдайк (1932−2009) ('Requiem' / John Updike) | Тенаревич. Переклад обраних творів українською мовою</title>
-	<link rel='stylesheet' id='una-main-styles-css'  href='https://gitcdn.xyz/repo/tenarevyc/tenarevyc.github.io/master/css/una-page.css' type='text/css' media='screen' />
+	<link rel='stylesheet' id='una-main-styles-css'  href='https://rawcdn.githack.com/tenarevyc/tenarevyc.github.io/e1cb6d01ca187a3589f5b9ce7c854af3448f47e0/css/una-page.css' type='text/css' media='screen' />
 	
 	<!-- Favicon -->
 	<link rel="icon" type="ico" href="https://dzwonsemrish7.cloudfront.net/items/2j0G0Y473X3e2o2L3k0c/favicon_zS4_icon.ico" sizes="32x32">
