--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				<li><a href="/kleine-erinnerungen-hugo-von-hofmannsthal.html">«Маленькі спогади»</a> — Гуґо фон Гофмансталь (1874−1929)</li>
 				<li><a href="/requiem-john-updike.html">«Реквієм»</a> — Джон Апдайк (1932−2009)</li>
 				<li><a href="/the-doom-that-came-to-sarnath-h-p-lovecraft.html">«Погибель, що її стрів Сарнас»</a> — Говард Філліпс Лавкрафт (1890−1937)</li>
+				<li><a href="/art-and-life-henry-taylor.html">«Життя та мистецтво»</a> — Генрі Тейлор</li>
 			</ul>
 		</div>
 
