--- a/fat-raymond-carver.html
+++ b/fat-raymond-carver.html
@@ -60,7 +60,7 @@
 
 <p>Ось так якось він розмовляє... дивно, знаєш? І тихо пихкає час від часу.</p>
 
-<p>— Думаю, ми почнемо з цезаря, а потім з’їмо тарілку супу з додатковим хлібом і маселком, якщо не важко. Потім ягнятини, — говорить, — і запеченої картоплі зі сметанкою. З десертом ми потім визначимося. Дякую дуже, — і віддає меню.</p>
+<p>— Думаю, ми почнемо з цезаря, а потім з’їмо тарілку супу з додатковим хлібом і масельцем, якщо не важко. Потім ягнятини, — говорить, — і запеченої картоплі зі сметанкою. З десертом ми потім визначимося. Дякую дуже, — і віддає меню.</p>
 
 <p>Господи, Ріто, оце в нього були пальці!</p>
 <p>Я спішу на кухню і віддаю замовлення Руді, він кривиться. Ти ж знаєш Руді. Він завжди такий на роботі.
